--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "dependencies": {
     "egg": "^2.0.0",
-    "egg-scripts": "^2.1.0"
+    "egg-scripts": "^2.1.0",
+    "egg-validate": "^1.0.0",
+    "mongoose": "^4.13.9"
   },
   "devDependencies": {
     "autod": "^3.0.1",
