use mockjs to create fake data  to mongodb by mongoose

--- a/run/agent_config.json
+++ b/run/agent_config.json
@@ -75,8 +75,8 @@
     "watcher": {
       "type": "development",
       "eventSources": {
-        "default": "D:\\study\\myblog\\node_modules\\egg-watcher\\lib\\event-sources\\default",
-        "development": "D:\\study\\myblog\\node_modules\\egg-watcher\\lib\\event-sources\\development"
+        "default": "d:\\study\\myblog\\node_modules\\egg-watcher\\lib\\event-sources\\default",
+        "development": "d:\\study\\myblog\\node_modules\\egg-watcher\\lib\\event-sources\\development"
       }
     },
     "multipart": {
@@ -108,14 +108,14 @@
     },
     "static": {
       "prefix": "/public/",
-      "dir": "D:\\study\\myblog\\app\\public",
+      "dir": "d:\\study\\myblog\\app\\public",
       "dynamic": true,
       "preload": false,
       "buffer": false,
       "maxFiles": 1000
     },
     "view": {
-      "root": "D:\\study\\myblog\\app\\view",
+      "root": "d:\\study\\myblog\\app\\view",
       "cache": false,
       "defaultExtension": ".html",
       "defaultViewEngine": "",
@@ -142,6 +142,7 @@
         "egg-mongoose": "^2.1.1",
         "egg-scripts": "^2.1.0",
         "egg-validate": "^1.0.0",
+        "mockjs": "^1.0.1-beta3",
         "mongoose": "^4.13.9"
       },
       "devDependencies": {
@@ -179,9 +180,9 @@
       "author": "Linyongping",
       "license": "MIT"
     },
-    "baseDir": "D:\\study\\myblog",
+    "baseDir": "d:\\study\\myblog",
     "HOME": "C:\\Users\\Sean",
-    "rundir": "D:\\study\\myblog\\run",
+    "rundir": "d:\\study\\myblog\\run",
     "dump": {
       "ignore": "<Set>"
     },
@@ -211,7 +212,7 @@
       }
     },
     "logger": {
-      "dir": "D:\\study\\myblog\\logs\\myblog",
+      "dir": "d:\\study\\myblog\\logs\\myblog",
       "encoding": "utf8",
       "env": "local",
       "level": "INFO",
@@ -290,8 +291,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-session",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-session",
       "version": "3.0.0"
     },
     "security": {
@@ -303,8 +304,8 @@
         "session"
       ],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-security",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-security",
       "version": "2.0.0"
     },
     "jsonp": {
@@ -316,8 +317,8 @@
         "security"
       ],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-jsonp",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-jsonp",
       "version": "2.0.0"
     },
     "onerror": {
@@ -329,8 +330,8 @@
         "jsonp"
       ],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-onerror",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-onerror",
       "version": "2.0.0"
     },
     "i18n": {
@@ -340,8 +341,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-i18n",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-i18n",
       "version": "2.0.0"
     },
     "watcher": {
@@ -351,8 +352,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-watcher",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-watcher",
       "version": "3.0.0"
     },
     "multipart": {
@@ -362,8 +363,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-multipart",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-multipart",
       "version": "2.0.0"
     },
     "development": {
@@ -377,8 +378,8 @@
       "env": [
         "local"
       ],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-development",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-development",
       "version": "2.1.0"
     },
     "schedule": {
@@ -388,8 +389,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-schedule",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-schedule",
       "version": "3.1.1"
     },
     "logrotator": {
@@ -401,8 +402,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-logrotator",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-logrotator",
       "version": "3.0.1"
     },
     "static": {
@@ -412,8 +413,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-static",
+      "from": "d:\\study\\myblog\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-static",
       "version": "2.0.0"
     },
     "view": {
@@ -423,8 +424,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-view",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-view",
       "version": "2.0.0"
     },
     "mongoose": {
@@ -434,8 +435,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-mongoose",
+      "from": "d:\\study\\myblog\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-mongoose",
       "version": "2.1.1"
     },
     "validate": {
@@ -445,8 +446,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-validate",
+      "from": "d:\\study\\myblog\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-validate",
       "version": "1.0.0"
     }
   }
