--- a/run/application_config.json
+++ b/run/application_config.json
@@ -79,22 +79,22 @@
     "i18n": {
       "defaultLocale": "en_US",
       "dirs": [
-        "D:\\study\\myblog\\node_modules\\egg-session\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-security\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-jsonp\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-onerror\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-i18n\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-watcher\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-multipart\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-development\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-schedule\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-logrotator\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-static\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-view\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-mongoose\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg-validate\\config\\locales",
-        "D:\\study\\myblog\\node_modules\\egg\\config\\locales",
-        "D:\\study\\myblog\\config\\locales"
+        "d:\\study\\myblog\\node_modules\\egg-session\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-security\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-jsonp\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-onerror\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-i18n\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-watcher\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-multipart\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-development\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-schedule\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-logrotator\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-static\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-view\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-mongoose\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg-validate\\config\\locales",
+        "d:\\study\\myblog\\node_modules\\egg\\config\\locales",
+        "d:\\study\\myblog\\config\\locales"
       ],
       "queryField": "locale",
       "cookieField": "locale",
@@ -104,8 +104,8 @@
     "watcher": {
       "type": "development",
       "eventSources": {
-        "default": "D:\\study\\myblog\\node_modules\\egg-watcher\\lib\\event-sources\\default",
-        "development": "D:\\study\\myblog\\node_modules\\egg-watcher\\lib\\event-sources\\development"
+        "default": "d:\\study\\myblog\\node_modules\\egg-watcher\\lib\\event-sources\\default",
+        "development": "d:\\study\\myblog\\node_modules\\egg-watcher\\lib\\event-sources\\development"
       }
     },
     "multipart": {
@@ -137,7 +137,7 @@
     },
     "static": {
       "prefix": "/public/",
-      "dir": "D:\\study\\myblog\\app\\public",
+      "dir": "d:\\study\\myblog\\app\\public",
       "dynamic": true,
       "preload": false,
       "buffer": false,
@@ -145,7 +145,7 @@
       "files": "<LRU>"
     },
     "view": {
-      "root": "D:\\study\\myblog\\app\\view",
+      "root": "d:\\study\\myblog\\app\\view",
       "cache": false,
       "defaultExtension": ".html",
       "defaultViewEngine": "",
@@ -172,6 +172,7 @@
         "egg-mongoose": "^2.1.1",
         "egg-scripts": "^2.1.0",
         "egg-validate": "^1.0.0",
+        "mockjs": "^1.0.1-beta3",
         "mongoose": "^4.13.9"
       },
       "devDependencies": {
@@ -209,9 +210,9 @@
       "author": "Linyongping",
       "license": "MIT"
     },
-    "baseDir": "D:\\study\\myblog",
+    "baseDir": "d:\\study\\myblog",
     "HOME": "C:\\Users\\Sean",
-    "rundir": "D:\\study\\myblog\\run",
+    "rundir": "d:\\study\\myblog\\run",
     "dump": {
       "ignore": "<Set>"
     },
@@ -242,7 +243,7 @@
       "returnRawBody": true
     },
     "logger": {
-      "dir": "D:\\study\\myblog\\logs\\myblog",
+      "dir": "d:\\study\\myblog\\logs\\myblog",
       "encoding": "utf8",
       "env": "local",
       "level": "INFO",
@@ -341,8 +342,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-session",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-session",
       "version": "3.0.0"
     },
     "security": {
@@ -354,8 +355,8 @@
         "session"
       ],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-security",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-security",
       "version": "2.0.0"
     },
     "jsonp": {
@@ -367,8 +368,8 @@
         "security"
       ],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-jsonp",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-jsonp",
       "version": "2.0.0"
     },
     "onerror": {
@@ -380,8 +381,8 @@
         "jsonp"
       ],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-onerror",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-onerror",
       "version": "2.0.0"
     },
     "i18n": {
@@ -391,8 +392,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-i18n",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-i18n",
       "version": "2.0.0"
     },
     "watcher": {
@@ -402,8 +403,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-watcher",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-watcher",
       "version": "3.0.0"
     },
     "multipart": {
@@ -413,8 +414,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-multipart",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-multipart",
       "version": "2.0.0"
     },
     "development": {
@@ -428,8 +429,8 @@
       "env": [
         "local"
       ],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-development",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-development",
       "version": "2.1.0"
     },
     "schedule": {
@@ -439,8 +440,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-schedule",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-schedule",
       "version": "3.1.1"
     },
     "logrotator": {
@@ -452,8 +453,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-logrotator",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-logrotator",
       "version": "3.0.1"
     },
     "static": {
@@ -463,8 +464,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-static",
+      "from": "d:\\study\\myblog\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-static",
       "version": "2.0.0"
     },
     "view": {
@@ -474,8 +475,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-view",
+      "from": "d:\\study\\myblog\\node_modules\\egg\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-view",
       "version": "2.0.0"
     },
     "mongoose": {
@@ -485,8 +486,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-mongoose",
+      "from": "d:\\study\\myblog\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-mongoose",
       "version": "2.1.1"
     },
     "validate": {
@@ -496,8 +497,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\study\\myblog\\config\\plugin.js",
-      "path": "D:\\study\\myblog\\node_modules\\egg-validate",
+      "from": "d:\\study\\myblog\\config\\plugin.js",
+      "path": "d:\\study\\myblog\\node_modules\\egg-validate",
       "version": "1.0.0"
     }
   }
