--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "egg-mongoose": "^2.1.1",
     "egg-scripts": "^2.1.0",
     "egg-validate": "^1.0.0",
+    "mockjs": "^1.0.1-beta3",
     "mongoose": "^4.13.9"
   },
   "devDependencies": {
