--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
     "autod": "autod",
-    "prepush": "git pull --rebase"
+    "prepush": "git pull"
   },
   "ci": {
     "version": "8"
